--- a/src/main/resources/templates/user/content/pages/my-page/cs.html
+++ b/src/main/resources/templates/user/content/pages/my-page/cs.html
@@ -7,16 +7,23 @@
 	<style>
         .btn-card-header {
             border-radius: 0.3rem;
-            font-weight: bold;
             border: none;
         }
+
+        .card-header a {
+            vertical-align: middle;
+        }
+
 	</style>
 	<div class="card">
 		<div class="card-header">
-			고객센터
-			<a class="btn-gray btn-card-header float-end ion-margin-end" href="/mypage/qna-list">문의내역</a>
-			<a class="btn-gray btn-card-header float-end ion-margin-end" href="/mypage/qna" style="
-                margin-right: 0.5rem;">문의하기</a>
+			<a>
+				고객센터
+			</a>
+			<a class="btn-gray btn-card-header float-end ion-margin-end p-2" href="/mypage/qna-list"
+			   style="font-size: small;">문의내역</a>
+			<a class="btn-gray btn-card-header float-end ion-margin-end p-2" href="/mypage/qna"
+			   style="font-size: small;margin-right: 0.5rem;">문의하기</a>
 		</div>
 		<div class="card-body">
 
