--- a/src/main/resources/templates/user/content/pages/my-page/dips.html
+++ b/src/main/resources/templates/user/content/pages/my-page/dips.html
@@ -11,6 +11,10 @@
         #shop-list {
             min-height: 30vh;
         }
+
+        .container {
+            padding: 0 !important;
+        }
 	</style>
 	<script>
         function loadProducts(page) {
