--- a/src/main/resources/templates/user/content/main.html
+++ b/src/main/resources/templates/user/content/main.html
@@ -72,7 +72,8 @@
 								                                 th:text="${feed.title}"></a></h6>
 								<div class="recent_feed_subtitle mh-2 mb-2" th:text="${feed.descriptionNoHtml}">
 								</div>
-								<a th:href="'/feed/' + ${feed.id}" class="btn btn-more rounded-pill mobile-mb-3">더
+								<a th:href="'/feed/' + ${feed.id}"
+								   class="btn btn-primary btn-more rounded-pill mobile-mb-3">더
 									알아보기</a>
 							</div>
 						</div>
@@ -97,7 +98,8 @@
 											                                 th:text="${feed.title}"></a></h6>
 											<div class="recent_feed_subtitle mb-4" th:text="${feed.descriptionNoHtml}">
 											</div>
-											<a th:href="'/feed/' + ${feed.id}" class="btn btn-more rounded-pill">더
+											<a th:href="'/feed/' + ${feed.id}"
+											   class="btn btn-primary btn-more rounded-pill">더
 												알아보기</a>
 										</div>
 									</div>
@@ -123,7 +125,8 @@
 											                                 th:text="${feed.title}"></a></h6>
 											<div class="recent_feed_subtitle mb-4" th:text="${feed.descriptionNoHtml}">
 											</div>
-											<a th:href="'/feed/' + ${feed.id}" class="btn btn-more rounded-pill">더
+											<a th:href="'/feed/' + ${feed.id}"
+											   class="btn btn-primary btn-more rounded-pill">더
 												알아보기</a>
 										</div>
 									</div>
