--- a/src/main/resources/templates/user/content/pages/my-page/index.html
+++ b/src/main/resources/templates/user/content/pages/my-page/index.html
@@ -44,21 +44,23 @@
 					<!--						       placeholder="현재 비밀번호" required="">-->
 					<!--					</div>-->
 
-					<div class="form-group mb-4">
-						<div class="row" id="passwordDiv">
-							<div class="col-6 form-floating">
+					<div class="row mb-3" id="passwordDiv">
+						<div class="col-6">
+							<div class="form-floating">
 								<input class="form-control" type="password" id="password" name="password"
 								       placeholder="바꿀 비밀번호">
 								<label for="password">변경할 비밀번호</label>
 							</div>
+						</div>
 
-							<div class="col-6 form-floating">
+						<div class="col-6">
+							<div class="form-floating">
 								<input class="form-control" type="password" id="passwordChk" name="passwordChk"
 								       placeholder="바꿀 비밀번호 확인">
 								<label for="passwordChk">비밀번호 재입력</label>
 							</div>
-							<span class="text-muted">비밀번호 변경시에만 입력해주세요.</span>
 						</div>
+						<span class="text-muted ms-2">비밀번호 변경시에만 입력해주세요.</span>
 					</div>
 				</th:block>
 
