--- a/src/main/resources/templates/user/fragments/head.html
+++ b/src/main/resources/templates/user/fragments/head.html
@@ -22,9 +22,9 @@
 	<meta name="viewport" content="initial-scale=1.0,user-scalable=no,maximum-scale=1,width=device-width"/>
 	<!--  todo -->
 	<meta name="description"
-	      content="Shopwise is Powerful features and You Can Use The Perfect Build this Template For Any eCommerce Website. The template is built for sell Fashion Products, Shoes, Bags, Cosmetics, Clothes, Sunglasses, Furniture, Kids Products, Electronics, Stationery Products and Sporting Goods.">
+	      content="SHIFT3에서 뉴스피드를 기반으로 현명한 쇼핑을 하세요.">
 	<meta name="keywords"
-	      content="ecommerce, electronics store, Fashion store, furniture store,  bootstrap 4, clean, minimal, modern, online store, responsive, retail, shopping, ecommerce store">
+	      content="select shop, feed shop, street brand, hiphop brand">
 
 	<!-- SITE TITLE -->
 	<title>SHIFT 3 - 편집샵에 대한 새로운 접근</title>
@@ -40,6 +40,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap"
 	      rel="stylesheet">
+
 	<!-- Icon Font CSS -->
 	<link href='//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css' rel='stylesheet' type='text/css'>
 
@@ -69,8 +70,11 @@
 	<!--    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@ionic/core/css/ionic.bundle.css" />-->
 
 	<style>
-        * {
-            font-family: 'Spoqa Han Sans Neo', 'sans-serif';
+        @import url(http://fonts.googleapis.com/earlyaccess/notosanskr.css);
+
+        body, talbe, th, td, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6,
+        pre, form, fieldset, textarea, blockquote, span, * {
+            font-family: 'Noto Sans KR', 'Spoqa Han Sans Neo', 'sans-serif';
         }
 	</style>
 </head>
