--- a/src/main/resources/templates/user/layout/mypage_layout.html
+++ b/src/main/resources/templates/user/layout/mypage_layout.html
@@ -27,32 +27,32 @@
         }
 
 
-        table {
+        table:not(.noResponsive) {
             border: 0;
         }
 
-        table thead {
+        table:not(.noResponsive) thead {
             display: none;
         }
 
-        table tr {
+        table:not(.noResponsive) tr {
             margin-bottom: 10px;
             display: block;
             border-bottom: 2px solid #ddd;
         }
 
-        table td {
+        table:not(.noResponsive) td {
             display: block;
             text-align: right;
             font-size: 13px;
             border-bottom: 1px dotted #ccc;
         }
 
-        table td:last-child {
+        table:not(.noResponsive) td:last-child {
             border-bottom: 0;
         }
 
-        table td:before {
+        table:not(.noResponsive) td:before {
             content: attr(data-label);
             float: left;
             text-transform: uppercase;
